add methods to create grouped hue plots

--- a/joularjx_result_visualizer.ipynb
+++ b/joularjx_result_visualizer.ipynb
@@ -20,8 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "import re\n",
-    "import glob"
+    "import re"
    ],
    "id": "a17d44eb631227e",
    "outputs": [],
@@ -201,7 +200,7 @@
     "    ax.tick_params(axis=\"x\", rotation=45)  # rotate service labels\n",
     "    sns.despine(ax=ax, offset=10, trim=True)\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
+    "    #plt.show()\n",
     "\n",
     "    # Save into experiment folder\n",
     "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
@@ -280,7 +279,7 @@
     "    sns.despine(ax=ax, offset=10, trim=True)\n",
     "    ax.legend(title=\"Method\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
+    "    #plt.show()\n",
     "\n",
     "    # Save into experiment folder\n",
     "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
@@ -339,7 +338,7 @@
     "        ax.legend(title=\"Method\", bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "\n",
     "        fig.tight_layout()\n",
-    "        plt.show()\n",
+    "        #plt.show()\n",
     "\n",
     "        # Save plot into experiment/service folder\n",
     "        plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
@@ -373,6 +372,7 @@
    "cell_type": "code",
    "source": [
     "results_data = {}\n",
+    "execution_times = {}\n",
     "\n",
     "for root, dirs, files in os.walk(out_folder):\n",
     "    for file in files:\n",
@@ -390,34 +390,43 @@
     "            # Initialize nested dicts\n",
     "            results_data.setdefault(experiment_id, {})\n",
     "            results_data[experiment_id].setdefault(test_run_id, {})\n",
+    "            execution_times.setdefault(experiment_id, {})\n",
     "\n",
     "            # Read results.txt\n",
     "            results_path = os.path.join(root, file)\n",
     "            with open(results_path, \"r\", encoding=\"utf-8\") as f:\n",
     "                for line in f:\n",
     "                    line = line.strip()\n",
-    "                    # Only process lines starting with \"Joules \"\n",
-    "                    if not line.startswith(\"Joules \"):\n",
-    "                        continue\n",
     "\n",
-    "                    try:\n",
-    "                        # Format: \"Joules <service_name>: <value>\"\n",
-    "                        prefix, rest = line.split(\"Joules \", 1)\n",
-    "                        service_part, energy_part = rest.split(\":\")\n",
-    "                        service_name = service_part.strip()\n",
-    "                        energy_value = float(energy_part.strip())\n",
-    "                    except ValueError:\n",
-    "                        continue  # skip malformed lines\n",
+    "                    if line.startswith(\"Joules \"):\n",
+    "                        try:\n",
+    "                            # Format: \"Joules <service_name>: <value>\"\n",
+    "                            prefix, rest = line.split(\"Joules \", 1)\n",
+    "                            service_part, energy_part = rest.split(\":\")\n",
+    "                            service_name = service_part.strip()\n",
+    "                            energy_value = float(energy_part.strip())\n",
+    "                        except ValueError:\n",
+    "                            continue  # skip malformed lines\n",
     "\n",
-    "                    normalized_service = (\n",
-    "                        service_name\n",
-    "                        .replace(\"-\", \"\")            # remove hyphens\n",
-    "                        .replace(\"Backend\", \"\")      # remove 'Backend'\n",
-    "                        .lower()                     # convert to lowercase\n",
-    "                        .strip()                     # trim whitespace\n",
-    "                    )\n",
+    "                        normalized_service = (\n",
+    "                            service_name\n",
+    "                            .replace(\"-\", \"\")            # remove hyphens\n",
+    "                            .replace(\"Backend\", \"\")      # remove 'Backend'\n",
+    "                            .lower()                     # convert to lowercase\n",
+    "                            .strip()                     # trim whitespace\n",
+    "                        )\n",
     "\n",
-    "                    results_data[experiment_id][test_run_id][normalized_service] = energy_value\n",
+    "                        results_data[experiment_id][test_run_id][normalized_service] = energy_value\n",
+    "\n",
+    "                    elif line.startswith(\"JMeter:\"):\n",
+    "                        try:\n",
+    "                            time_str = line.split(\"JMeter:\")[1].strip()\n",
+    "                            # Format: HH:MM:SS\n",
+    "                            h, m, s = map(int, time_str.split(\":\"))\n",
+    "                            total_seconds = h * 3600 + m * 60 + s\n",
+    "                            execution_times[experiment_id][test_run_id] = total_seconds\n",
+    "                        except Exception:\n",
+    "                            continue\n",
     "\n",
     "# Example printout\n",
     "for exp_id, test_runs in results_data.items():\n",
@@ -501,7 +510,7 @@
     "\n",
     "    sns.despine(ax=ax, offset=10, trim=True)\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
+    "    #plt.show()\n",
     "\n",
     "    # Save into experiment's plot folder\n",
     "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
@@ -541,7 +550,7 @@
     "\n",
     "sns.despine(ax=ax, offset=10, trim=True)\n",
     "fig.tight_layout()\n",
-    "plt.show()\n",
+    "#plt.show()\n",
     "\n",
     "# Create output folder: out/plots\n",
     "plot_folder = os.path.join(out_folder, \"plots\")\n",
@@ -619,7 +628,7 @@
     "    ax.tick_params(axis=\"x\", rotation=45)\n",
     "    sns.despine(ax=ax, offset=10, trim=True)\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
+    "    #plt.show()\n",
     "\n",
     "    # Save plots\n",
     "    plot_folder = os.path.join(out_folder, exp_id, \"plots\")\n",
@@ -635,6 +644,329 @@
     "    print(f\"Saved service-level plots for experiment '{exp_id}' in {plot_folder}\")\n"
    ],
    "id": "9c5c5c4a6dbfe855",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def plot_comparative_experiments(df_plot, out_folder, include_experiments=None, filename_prefix=None):\n",
+    "\n",
+    "    if include_experiments:\n",
+    "        df_plot_filtered = df_plot[df_plot[\"experiment\"].isin(include_experiments)]\n",
+    "    else:\n",
+    "        df_plot_filtered = df_plot.copy()\n",
+    "\n",
+    "    # Define order for reproducibility\n",
+    "    experiment_order = include_experiments or sorted(df_plot_filtered[\"experiment\"].unique())\n",
+    "\n",
+    "    sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
+    "    fig, ax = plt.subplots(figsize=(12, 7), dpi=120)\n",
+    "\n",
+    "    sns.boxplot(\n",
+    "        x=\"experiment\",\n",
+    "        y=\"total_energy\",\n",
+    "        hue=\"experiment\",\n",
+    "        data=df_plot_filtered,\n",
+    "        order=experiment_order,\n",
+    "        hue_order=experiment_order,\n",
+    "        ax=ax,\n",
+    "        dodge=True,\n",
+    "        width=0.6\n",
+    "    )\n",
+    "\n",
+    "    sns.swarmplot(\n",
+    "        x=\"experiment\",\n",
+    "        y=\"total_energy\",\n",
+    "        hue=\"experiment\",\n",
+    "        data=df_plot_filtered,\n",
+    "        order=experiment_order,\n",
+    "        hue_order=experiment_order,\n",
+    "        dodge=True,\n",
+    "        size=4,\n",
+    "        alpha=0.7,\n",
+    "        ax=ax,\n",
+    "        legend=True\n",
+    "    )\n",
+    "\n",
+    "    ax.set_ylabel(\"Total Energy (Joules)\")\n",
+    "    ax.set_xlabel(\"Experiment\")\n",
+    "    ax.set_title(\"Comparative Energy Consumption Across Experiments\", fontsize=16, fontweight=\"bold\")\n",
+    "\n",
+    "    sns.despine(ax=ax, offset=10, trim=True)\n",
+    "    ax.set_xticklabels([])\n",
+    "    ax.legend(title=\"Experiment\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    #plt.show()\n",
+    "\n",
+    "    plot_folder = os.path.join(out_folder, \"plots\")\n",
+    "    os.makedirs(plot_folder, exist_ok=True)\n",
+    "\n",
+    "    png_path = os.path.join(plot_folder, f\"{filename_prefix}_total_energy_boxplot.png\")\n",
+    "    svg_path = os.path.join(plot_folder, f\"{filename_prefix}_total_energy_boxplot.svg\")\n",
+    "\n",
+    "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "    print(f\"Saved comparative experiment plots to {plot_folder}\")\n",
+    "\n",
+    "\n",
+    "plot_comparative_experiments(df_plot, out_folder, include_experiments=[\"03_Lazy_Loading\", \"08_GraalVM_Native_Build\", \"09_Virtual_Threads\", \"10_Monolithic_Architecture\"], filename_prefix=\"Architectural_Level_Optimization\")"
+   ],
+   "id": "91a9da93f2fdd7f2",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def plot_comparative_services(\n",
+    "        df_service_plot,\n",
+    "        out_folder,\n",
+    "        include_experiments=None,\n",
+    "        include_services=None,\n",
+    "        filename_prefix=None\n",
+    "):\n",
+    "\n",
+    "    # Apply filtering if requested\n",
+    "    df_filtered = df_service_plot.copy()\n",
+    "    if include_experiments:\n",
+    "        df_filtered = df_filtered[df_filtered[\"experiment\"].isin(include_experiments)]\n",
+    "    if include_services:\n",
+    "        df_filtered = df_filtered[df_filtered[\"service\"].isin(include_services)]\n",
+    "\n",
+    "    if df_filtered.empty:\n",
+    "        print(\"No data after filtering; skipping plot.\")\n",
+    "        return\n",
+    "\n",
+    "    # Define order for reproducibility\n",
+    "    experiment_order = include_experiments or sorted(df_filtered[\"experiment\"].unique())\n",
+    "    service_order = include_services or sorted(df_filtered[\"service\"].unique())\n",
+    "\n",
+    "    sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(14, 7), dpi=120)\n",
+    "\n",
+    "    # Boxplot: each service on x-axis, colored by experiment\n",
+    "    sns.boxplot(\n",
+    "        x=\"service\",\n",
+    "        y=\"total_energy\",\n",
+    "        hue=\"experiment\",\n",
+    "        data=df_filtered,\n",
+    "        order=service_order,\n",
+    "        hue_order=experiment_order,\n",
+    "        ax=ax,\n",
+    "        dodge=True,\n",
+    "        width=0.6\n",
+    "    )\n",
+    "\n",
+    "    # Overlay swarmplot to show individual data points\n",
+    "    sns.swarmplot(\n",
+    "        x=\"service\",\n",
+    "        y=\"total_energy\",\n",
+    "        hue=\"experiment\",\n",
+    "        data=df_filtered,\n",
+    "        order=service_order,\n",
+    "        hue_order=experiment_order,\n",
+    "        dodge=True,\n",
+    "        size=4,\n",
+    "        alpha=0.7,\n",
+    "        ax=ax,\n",
+    "        legend=False  # avoid duplicate legend\n",
+    "    )\n",
+    "\n",
+    "    # Labels and formatting\n",
+    "    ax.set_ylabel(\"Total Energy (Joules)\")\n",
+    "    ax.set_xlabel(\"Service\")\n",
+    "    ax.set_title(\n",
+    "        \"Comparative Service-Level Energy Consumption Across Experiments\",\n",
+    "        fontsize=16, fontweight=\"bold\"\n",
+    "    )\n",
+    "    ax.tick_params(axis=\"x\", rotation=45)\n",
+    "    sns.despine(ax=ax, offset=10, trim=True)\n",
+    "    ax.legend(title=\"Experiment\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    #plt.show()\n",
+    "\n",
+    "    # Save plots\n",
+    "    plot_folder = os.path.join(out_folder, \"plots\")\n",
+    "    os.makedirs(plot_folder, exist_ok=True)\n",
+    "\n",
+    "    png_path = os.path.join(plot_folder, f\"{filename_prefix}_total_energy_boxplot.png\")\n",
+    "    svg_path = os.path.join(plot_folder, f\"{filename_prefix}_total_energy_boxplot.svg\")\n",
+    "\n",
+    "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "    print(f\"Saved comparative service-level plots to {plot_folder}\")\n",
+    "\n",
+    "plot_comparative_services(\n",
+    "    df_service_plot,\n",
+    "    out_folder,\n",
+    "    include_experiments=[\"03_Lazy_Loading\", \"08_GraalVM_Native_Build\", \"09_Virtual_Threads\"],\n",
+    "    include_services=[\"customercore\", \"customerselfservice\", \"policymanagement\"],\n",
+    "    filename_prefix=\"Service_Comparison_Across_Experiments\"\n",
+    ")"
+   ],
+   "id": "f5a507fdf952e30f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def plot_comparative_methods(\n",
+    "        df_method_avg,\n",
+    "        out_folder,\n",
+    "        include_experiments=None,\n",
+    "        include_services=None,\n",
+    "        include_methods=None,\n",
+    "        filename_prefix=None,\n",
+    "):\n",
+    "\n",
+    "    df_filtered = df_method_avg.copy()\n",
+    "    if include_experiments:\n",
+    "        df_filtered = df_filtered[df_filtered[\"experiment\"].isin(include_experiments)]\n",
+    "    if include_services:\n",
+    "        df_filtered = df_filtered[df_filtered[\"service\"].isin(include_services)]\n",
+    "    if include_methods:\n",
+    "        df_filtered = df_filtered[df_filtered[\"method\"].isin(include_methods)]\n",
+    "\n",
+    "    if df_filtered.empty:\n",
+    "        print(\"No data after filtering; skipping plot.\")\n",
+    "        return\n",
+    "\n",
+    "    sns.set_theme(style=\"whitegrid\", context=\"talk\", palette=\"colorblind\")\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(12, 7), dpi=120)\n",
+    "\n",
+    "    # Grouped bar plot: compare methods within this service and experiment\n",
+    "    sns.barplot(\n",
+    "        x=\"method\",\n",
+    "        y=\"avg_energy\",\n",
+    "        hue=\"experiment\",\n",
+    "        data=df_filtered,\n",
+    "        ax=ax,\n",
+    "        dodge=True,\n",
+    "        legend=True\n",
+    "    )\n",
+    "\n",
+    "    ax.set_ylabel(\"Average Energy (Joules)\")\n",
+    "    ax.set_xlabel(\"Methods\")\n",
+    "    ax.set_title(\n",
+    "        f\"Average Method Energy Consumption Across Experiments\",\n",
+    "        fontsize=16,\n",
+    "        fontweight=\"bold\"\n",
+    "    )\n",
+    "\n",
+    "    sns.despine(ax=ax, offset=10, trim=True)\n",
+    "    ax.legend(title=\"Experiment\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    ax.set_xticklabels(ax.get_xticklabels(), rotation=45, ha=\"right\")\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    #plt.show()\n",
+    "\n",
+    "    # Save plots\n",
+    "    plot_folder = os.path.join(out_folder, \"plots\")\n",
+    "    os.makedirs(plot_folder, exist_ok=True)\n",
+    "\n",
+    "    png_path = os.path.join(plot_folder, f\"{filename_prefix}_methods_avg_energy_barplot.png\")\n",
+    "    svg_path = os.path.join(plot_folder, f\"{filename_prefix}_methods_avg_energy_barplot.svg\")\n",
+    "\n",
+    "    fig.savefig(png_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    fig.savefig(svg_path, bbox_inches=\"tight\")\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "    print(f\"Saved {filename_prefix} bar plot in {plot_folder}\")\n",
+    "\n",
+    "plot_comparative_methods(\n",
+    "    df_method_avg,\n",
+    "    out_folder,\n",
+    "    include_experiments=[\"01_Baseline\", \"02_Manual_Join_Query\", \"03_Lazy_Loading\"],\n",
+    "    include_services=[\"policymanagement\"],\n",
+    "    filename_prefix=\"Code_Level_Optimization_With_Baseline_policymanagement\"\n",
+    ")\n",
+    "\n",
+    "plot_comparative_methods(\n",
+    "    df_method_avg,\n",
+    "    out_folder,\n",
+    "    include_experiments=[\"01_Baseline\", \"02_Manual_Join_Query\", \"03_Lazy_Loading\"],\n",
+    "    include_services=[\"customerselfservice\"],\n",
+    "    filename_prefix=\"Code_Level_Optimization_With_Baseline_customerselfservice\"\n",
+    ")\n",
+    "\n",
+    "plot_comparative_methods(\n",
+    "    df_method_avg,\n",
+    "    out_folder,\n",
+    "    include_experiments=[\"03_Lazy_Loading\", \"04_Cache_Database_Call\", \"05_Cache_Service_Call\", \"06_JDBC_Replacement\", \"07_MongoDB_Replacement\"],\n",
+    "    include_services=[\"customercore\"],\n",
+    "    filename_prefix=\"Design_Level_Optimization_With_Baseline_customercore\"\n",
+    ")\n",
+    "\n",
+    "plot_comparative_methods(\n",
+    "    df_method_avg,\n",
+    "    out_folder,\n",
+    "    include_experiments=[\"03_Lazy_Loading\", \"04_Cache_Database_Call\", \"05_Cache_Service_Call\", \"06_JDBC_Replacement\", \"07_MongoDB_Replacement\"],\n",
+    "    include_services=[\"customerselfservice\"],\n",
+    "    filename_prefix=\"Design_Level_Optimization_With_Baseline_customerselfservice\"\n",
+    ")"
+   ],
+   "id": "140372e4ef2f3ffe",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "experiment_averages = {}\n",
+    "experiment_time_averages = {}\n",
+    "\n",
+    "for exp_id, test_runs in results_data.items():\n",
+    "    total_energy_sum = 0.0\n",
+    "    total_time_sum = 0.0\n",
+    "    num_runs = 0\n",
+    "\n",
+    "    for test_id, services in test_runs.items():\n",
+    "        run_total_energy = sum(services.values())\n",
+    "        run_total_time = execution_times.get(exp_id, {}).get(test_id, 0)\n",
+    "\n",
+    "        total_energy_sum += run_total_energy\n",
+    "        total_time_sum += run_total_time\n",
+    "        num_runs += 1\n",
+    "\n",
+    "    if num_runs > 0:\n",
+    "        avg_energy = total_energy_sum / num_runs\n",
+    "        avg_time_sec = total_time_sum / num_runs\n",
+    "\n",
+    "        experiment_averages[exp_id] = avg_energy\n",
+    "        experiment_time_averages[exp_id] = avg_time_sec\n",
+    "\n",
+    "plot_folder = os.path.join(out_folder, \"plots\")\n",
+    "os.makedirs(plot_folder, exist_ok=True)\n",
+    "summary_path = os.path.join(plot_folder, \"summary_results.txt\")\n",
+    "\n",
+    "with open(summary_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"=== Average Total Energy per Experiment ===\\n\")\n",
+    "    for exp_id, avg_energy in sorted(experiment_averages.items()):\n",
+    "        f.write(f\"{exp_id}: {avg_energy:.2f} J\\n\")\n",
+    "\n",
+    "    f.write(\"\\n=== Average JMeter Execution Time per Experiment ===\\n\")\n",
+    "    for exp_id, avg_sec in sorted(experiment_time_averages.items()):\n",
+    "        avg_min = int(avg_sec // 60)\n",
+    "        avg_remaining_sec = int(avg_sec % 60)\n",
+    "        f.write(f\"{exp_id}: {avg_min} min {avg_remaining_sec} sec ({avg_sec:.1f} s)\\n\")\n",
+    "\n",
+    "print(f\"\\nSaved summary results to {summary_path}\")\n"
+   ],
+   "id": "5cf59c6afa3e709b",
    "outputs": [],
    "execution_count": null
   }
